<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="center">
	<Button
		android:text="@string/tutorial"
		android:id="@+id/tutorial_game_button"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>
	<Button
		android:text="@string/easy"
		android:id="@+id/easy_game_button"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>
	<Button
		android:text="@string/normal"
		android:id="@+id/normal_game_button"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>
	<Button
		android:text="@string/hard"
		android:id="@+id/hard_game_button"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>
	<Button
		android:text="@string/race"
		android:id="@+id/race_game_button"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>
	<Button
		android:text="@string/insane"
		android:id="@+id/insane_game_button"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>
</LinearLayout>
